[package]
name = "task-tracker"
version = "0.1.0"
authors = ["Ocki Bagus P. <ocki.bagus.p@gmail.com>"]
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10.0"
lazy_static = "1.5.0"
mockall = "0.13.1"
once_cell = "1.21.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# [dependencies.uuid]
# version = "1.16.0"
## Lets you generate random UUIDs
# features = [
#    "v7",
#    "serde"
# ]
